2043 add first resilience tests using testcontainers and toxyproxy, refactor ha stack to be able to work properly inside docker